React-井字棋游戏：根据winner状态控制 history 的显示

--- a/React/02-02-工程化-create-react-app/tictactoe-game/src/components/Board/styles.css
+++ b/React/02-02-工程化-create-react-app/tictactoe-game/src/components/Board/styles.css
@@ -1,5 +1,6 @@
 .board-row {
     display: flex;
-    justify-content: center;
-    align-items: center;
+}
+.board-header{
+    margin-bottom: 5px;
 }
