--- a/React/02-02-工程化-create-react-app/tictactoe-game/src/index.css
+++ b/React/02-02-工程化-create-react-app/tictactoe-game/src/index.css
@@ -15,15 +15,20 @@ code {
 
 html,
 body,
-#root,
-.App {
+#root{
   width: 100%;
   height: 100%;
 }
 
 .App {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  padding: 100px;
+}
+
+.game-board {
+  width: 500px;
+}
+
+.game-history {
+  flex: 1;
 }
